// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SimplePopover /> SimplePopover with multiple props matches with snapshot 1`] = `
.c4 {
  margin-bottom: 0.3125rem;
}

.c6 {
  margin-top: 0.3125rem;
  margin-bottom: 0.625rem;
}

.c8 {
  margin-top: 1.875rem;
}

.c5 {
  --Title-css-color: #222;
  font-family: Maax,Helvetica,Arial,sans-serif;
  -webkit-letter-spacing: .01rem;
  -moz-letter-spacing: .01rem;
  -ms-letter-spacing: .01rem;
  letter-spacing: .01rem;
  font-weight: 600;
  color: #222;
  color: var(--Title-css-color);
}

.c5.k-Title--noMargin {
  margin-top: 0;
  margin-bottom: 0;
}

.c5.k-Title--italic {
  font-style: italic;
}

.c5.k-Title--primary {
  font-size: 2.2806973457336426rem;
  line-height: 1.2;
}

.c5.k-Title--secondary {
  font-size: 2.0272865295410156rem;
  line-height: 1.2;
}

.c5.k-Title--tertiary {
  font-size: 1.802032470703125rem;
  line-height: 1.2;
}

.c5.k-Title--quaternary {
  font-size: 1.601806640625rem;
  line-height: 1.2;
}

.c5.k-Title--quinary {
  font-size: 1.265625rem;
  line-height: 1.2;
}

.c5.k-Title--senary {
  font-size: 1.125rem;
  line-height: 1.2;
}

.c5.k-Title--septenary {
  font-size: 1rem;
  line-height: 1.2;
}

.c7 {
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 400;
}

.c7.k-Paragraph--noMargin {
  margin-top: 0;
  margin-bottom: 0;
}

.c7.k-Paragraph--normalLineHeight {
  line-height: normal;
}

.c7.k-Paragraph--italic {
  font-style: italic;
}

.c7.k-Paragraph--primary {
  font-size: 1rem;
  line-height: 1.6;
}

.c7.k-Paragraph--secondary {
  font-size: 0.8888888888888888rem;
  line-height: 1.6;
}

.c7.k-Paragraph--tertiary {
  font-size: 0.7901234567901234rem;
  line-height: 1.6;
}

.c7.k-Paragraph--quaternary {
  font-size: 0.7901234567901234rem;
  line-height: 1.6;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  min-height: var(--Button-dimension);
  padding: var(--Button-padding);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.625rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
}

.c1:disabled {
  cursor: not-allowed;
}

.c1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c1:focus:not(:focus-visible) {
  outline-color: transparent;
}

.c1:focus-visible {
  outline-color: #bae8fd;
}

.c1.k-Button--nano {
  --Button-dimension: 1.25rem;
  --Button-min-width: 6.25rem;
  --Button-padding: 0 0.375rem;
  font-size: 0.7901234567901234rem;
}

.c1.k-Button--micro {
  --Button-dimension: 1.875rem;
  --Button-min-width: 8.125rem;
  --Button-padding: 0.3125rem 0.625rem;
  font-size: 0.7901234567901234rem;
}

.c1.k-Button--tiny {
  --Button-dimension: 2.5rem;
  --Button-min-width: 10rem;
  --Button-padding: 0.4375rem 1.25rem;
}

.c1.k-Button--regular {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c1.k-Button--big {
  --Button-dimension: 3.125rem;
}

.c1.k-Button--huge {
  --Button-dimension: 4.375rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c1.k-Button--giant {
  --Button-dimension: 4.375rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c1.k-Button--fit-min-width:not(.k-Button--fit-icon):not(.k-Button--fit-fluid) {
  min-width: var(--Button-min-width);
}

.c1.k-Button--fit-icon {
  padding: 0;
  overflow: hidden;
  width: var(--Button-dimension);
  height: var(--Button-dimension);
}

.c1.k-Button--fit-fluid {
  width: 100%;
}

.c1.k-Button--hasBorderRadius {
  border-radius: var(--Button-border-radius);
}

.c1.k-Button--rounded {
  border-radius: 50%;
}

.c1.k-Button--orion {
  border-radius: 0.375rem;
}

.c1.k-Button--hydrogen {
  border: 0.125rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--hydrogen svg:not(.k-ColorSvg),
.c1.k-Button--hydrogen svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--hydrogen:hover,
.c1.k-Button--hydrogen:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c1.k-Button--hydrogen:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c1.k-Button--hydrogen:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--helium {
  border: 0.125rem solid #19b4fa;
  background-color: #19b4fa;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--helium svg:not(.k-ColorSvg),
.c1.k-Button--helium svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--helium:hover,
.c1.k-Button--helium:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c1.k-Button--helium:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c1.k-Button--helium:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--lithium {
  border: 0.125rem solid #bae8fd;
  background-color: #fff;
  color: #19b4fa;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--lithium svg:not(.k-ColorSvg),
.c1.k-Button--lithium svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--lithium:hover,
.c1.k-Button--lithium:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c1.k-Button--lithium:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c1.k-Button--lithium:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--beryllium {
  border: 0.125rem solid #222;
  background-color: #222;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--beryllium svg:not(.k-ColorSvg),
.c1.k-Button--beryllium svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--beryllium:hover,
.c1.k-Button--beryllium:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c1.k-Button--beryllium:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c1.k-Button--beryllium:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--carbon {
  border: 0.125rem solid #fff;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--carbon svg:not(.k-ColorSvg),
.c1.k-Button--carbon svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--carbon:hover,
.c1.k-Button--carbon:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c1.k-Button--carbon:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c1.k-Button--carbon:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--oxygen {
  border: 0.125rem dashed #bae8fd;
  background-color: #fff;
  color: #19b4fa;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--oxygen svg:not(.k-ColorSvg),
.c1.k-Button--oxygen svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--oxygen:hover,
.c1.k-Button--oxygen:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c1.k-Button--oxygen:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c1.k-Button--oxygen:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--copper {
  border: 0.125rem solid #ffb2c7;
  background-color: #fff;
  color: #ff0046;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--copper svg:not(.k-ColorSvg),
.c1.k-Button--copper svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--copper:hover,
.c1.k-Button--copper:focus {
  border-color: currentColor;
  background-color: #fff;
  color: #ff0046;
}

.c1.k-Button--copper:active {
  border-color: currentColor;
  background-color: #fff;
  color: #ff0046;
}

.c1.k-Button--copper:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--boron {
  border: 0.125rem solid #636363;
  background-color: #222;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--boron svg:not(.k-ColorSvg),
.c1.k-Button--boron svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--boron:hover,
.c1.k-Button--boron:focus {
  border-color: currentColor;
  background-color: #2d2d2d;
  color: #fff;
}

.c1.k-Button--boron:active {
  border-color: currentColor;
  background-color: #2d2d2d;
  color: #b8b8b8;
}

.c1.k-Button--boron:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--neon {
  border: 0.125rem solid #ff7800;
  background-color: #ff7800;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--neon svg:not(.k-ColorSvg),
.c1.k-Button--neon svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--neon:hover,
.c1.k-Button--neon:focus {
  border-color: #f57905;
  background-color: #f57905;
  color: #fff;
}

.c1.k-Button--neon:active {
  border-color: #eb6e00;
  background-color: #eb6e00;
  color: #fff;
}

.c1.k-Button--neon:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--iron {
  border: 0.125rem solid #ff0046;
  background-color: #ff0046;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--iron svg:not(.k-ColorSvg),
.c1.k-Button--iron svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--iron:hover,
.c1.k-Button--iron:focus {
  border-color: #d8043e;
  background-color: #d8043e;
  color: #fff;
}

.c1.k-Button--iron:active {
  border-color: #a8002e;
  background-color: #a8002e;
  color: #fff;
}

.c1.k-Button--iron:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--social_facebook {
  border: 0.125rem solid #3b5998;
  background-color: #3b5998;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--social_facebook svg:not(.k-ColorSvg),
.c1.k-Button--social_facebook svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--social_facebook:hover,
.c1.k-Button--social_facebook:focus {
  border-color: #2c4a89;
  background-color: #2c4a89;
  color: #fff;
}

.c1.k-Button--social_facebook:active {
  border-color: #1d3b7a;
  background-color: #1d3b7a;
  color: #fff;
}

.c1.k-Button--social_facebook:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--social_twitter {
  border: 0.125rem solid #55acee;
  background-color: #55acee;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--social_twitter svg:not(.k-ColorSvg),
.c1.k-Button--social_twitter svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--social_twitter:hover,
.c1.k-Button--social_twitter:focus {
  border-color: #469ddf;
  background-color: #469ddf;
  color: #fff;
}

.c1.k-Button--social_twitter:active {
  border-color: #388ed0;
  background-color: #388ed0;
  color: #fff;
}

.c1.k-Button--social_twitter:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--social_linkedin {
  border: 0.125rem solid #00669e;
  background-color: #00669e;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--social_linkedin svg:not(.k-ColorSvg),
.c1.k-Button--social_linkedin svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--social_linkedin:hover,
.c1.k-Button--social_linkedin:focus {
  border-color: #00578f;
  background-color: #00578f;
  color: #fff;
}

.c1.k-Button--social_linkedin:active {
  border-color: #004880;
  background-color: #004880;
  color: #fff;
}

.c1.k-Button--social_linkedin:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--social_instagram {
  border: 0.125rem solid #3b5998;
  background-color: #3b5998;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  -webkit-transition: background 0.2s,color 0.2s;
  transition: background 0.2s,color 0.2s;
  border: 0 !important;
  background-repeat: no-repeat;
  background-image: radial-gradient( farthest-side at 32% 100%,#ffe17d 0%,#ffcd69 10%,#fa9137 28%,#eb4141 42%,transparent 82% ),linear-gradient(135deg,#234bd7 12%,#c33cbe 58%);
  background-size: 160% 100%;
  background-position: center;
}

.c1.k-Button--social_instagram svg:not(.k-ColorSvg),
.c1.k-Button--social_instagram svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--social_instagram:hover,
.c1.k-Button--social_instagram:focus {
  background-image: radial-gradient( farthest-side at 32% 100%,#f0d26e 0%,#f0be5a 10%,#eb8228 28%,#dc3232 42%,transparent 82% ),linear-gradient(135deg,#143cc8 12%,#b42daf 58%);
}

.c1.k-Button--social_instagram:active {
  background-image: radial-gradient( farthest-side at 32% 100%,#e1c35f 0%,#e1af4b 10%,#dc7319 28%,#cd2323 42%,transparent 82% ),linear-gradient(135deg,#052db9 12%,#a51ea0 58%);
}

.c1.k-Button--social_instagram:hover,
.c1.k-Button--social_instagram:focus {
  border-color: #2c4a89;
  background-color: #2c4a89;
  color: #fff;
}

.c1.k-Button--social_instagram:active {
  border-color: #1d3b7a;
  background-color: #1d3b7a;
  color: #fff;
}

.c1.k-Button--social_instagram:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--social_youtube {
  border: 0.125rem solid #ff0000;
  background-color: #ff0000;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--social_youtube svg:not(.k-ColorSvg),
.c1.k-Button--social_youtube svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--social_youtube:hover,
.c1.k-Button--social_youtube:focus {
  border-color: #f00000;
  background-color: #f00000;
  color: #fff;
}

.c1.k-Button--social_youtube:active {
  border-color: #e10000;
  background-color: #e10000;
  color: #fff;
}

.c1.k-Button--social_youtube:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--social_pinterest {
  border: 0.125rem solid #bd081c;
  background-color: #bd081c;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--social_pinterest svg:not(.k-ColorSvg),
.c1.k-Button--social_pinterest svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--social_pinterest:hover,
.c1.k-Button--social_pinterest:focus {
  border-color: #ae000d;
  background-color: #ae000d;
  color: #fff;
}

.c1.k-Button--social_pinterest:active {
  border-color: #9f0000;
  background-color: #9f0000;
  color: #fff;
}

.c1.k-Button--social_pinterest:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0 {
  padding: 2.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  border: solid #eee 0.125rem;
  box-sizing: border-box;
  max-width: 34.6875rem;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  margin-bottom: 1.25rem;
  background-color: #fff;
  opacity: 1;
  visibility: visible;
  -webkit-transition: opacity 0.3s ease,visibility 0s ease;
  transition: opacity 0.3s ease,visibility 0s ease;
  -webkit-transition-delay: 0s,0s;
  transition-delay: 0s,0s;
}

.c0[aria-hidden='true'] {
  opacity: 0;
  visibility: hidden;
  -webkit-transition-delay: 0s,0.3s;
  transition-delay: 0s,0.3s;
}

.c3 {
  display: none;
  min-width: 5rem;
  min-height: 5rem;
  margin-right: 2.5rem;
  border-radius: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #bae8fd;
}

.c2 {
  position: absolute;
  top: -0.125rem;
  right: -0.125rem;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c9 > * + * {
  margin-top: 1.25rem;
}

@media (min-width:40rem) {
  .c5.k-Title--primary {
    font-size: 2.8865075781941414rem;
  }
}

@media (min-width:67.5rem) {
  .c5.k-Title--primary {
    font-size: 4.109890672858455rem;
  }
}

@media (min-width:40rem) {
  .c5.k-Title--secondary {
    font-size: 2.2806973457336426rem;
  }
}

@media (min-width:67.5rem) {
  .c5.k-Title--secondary {
    font-size: 2.8865075781941414rem;
  }
}

@media (min-width:40rem) {
  .c5.k-Title--tertiary {
    font-size: 2.0272865295410156rem;
  }
}

@media (min-width:67.5rem) {
  .c5.k-Title--tertiary {
    font-size: 2.2806973457336426rem;
  }
}

@media (min-width:40rem) {
  .c5.k-Title--quaternary {
    font-size: 1.802032470703125rem;
  }
}

@media (min-width:67.5rem) {
  .c5.k-Title--quaternary {
    font-size: 2.0272865295410156rem;
  }
}

@media (min-width:40rem) {
  .c5.k-Title--quinary {
    font-size: 1.601806640625rem;
  }
}

@media (min-width:67.5rem) {
  .c5.k-Title--quinary {
    font-size: 1.802032470703125rem;
  }
}

@media (min-width:40rem) {
  .c5.k-Title--senary {
    font-size: 1.265625rem;
  }
}

@media (min-width:67.5rem) {
  .c5.k-Title--senary {
    font-size: 1.601806640625rem;
  }
}

@media (min-width:40rem) {
  .c5.k-Title--septenary {
    font-size: 1.125rem;
  }
}

@media (min-width:67.5rem) {
  .c5.k-Title--septenary {
    font-size: 1.265625rem;
  }
}

@media (min-width:40rem) {
  .c7.k-Paragraph--primary {
    font-size: 1.125rem;
  }
}

@media (min-width:67.5rem) {
  .c7.k-Paragraph--primary {
    font-size: 1.265625rem;
  }
}

@media (min-width:40rem) {
  .c7.k-Paragraph--secondary {
    font-size: 1rem;
  }
}

@media (min-width:67.5rem) {
  .c7.k-Paragraph--secondary {
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c7.k-Paragraph--tertiary {
    font-size: 0.8888888888888888rem;
  }
}

@media (min-width:67.5rem) {
  .c7.k-Paragraph--tertiary {
    font-size: 0.8888888888888888rem;
  }
}

@media (min-width:40rem) {
  .c7.k-Paragraph--quaternary {
    font-size: 0.7901234567901234rem;
  }
}

@media (min-width:67.5rem) {
  .c7.k-Paragraph--quaternary {
    font-size: 0.7901234567901234rem;
  }
}

@media (min-width:40rem) {
  .c1.k-Button--big {
    --Button-min-width: 13.75rem;
    --Button-dimension: 4.375rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c1.k-Button--huge {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c1.k-Button--giant {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5.625rem;
    font-size: 1rem;
    --Button-padding: 0.625rem 2.5rem;
  }
}

@media (max-width:39.9375rem) {
  .c1[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none) {
    min-width: initial !important;
    padding: var(--Button-padding);
    width: initial;
    height: initial;
    width: initial;
  }

  .c1[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-min-width {
    min-width: var(--Button-min-width) !important;
  }

  .c1[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-icon {
    padding: 0;
    overflow: hidden;
    width: var(--Button-dimension);
    height: var(--Button-dimension);
  }

  .c1[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-fluid {
    width: 100%;
  }
}

@media (min-width:40rem) {
  .c1.k-Button--orion {
    border-radius: 0.5rem;
  }
}

@media (min-width:40rem) {
  .c0 {
    padding: 3.125rem 2.5rem;
  }
}

@media (min-width:640px) {
  .c3 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:640px) {
  .c9 > * + * {
    margin-top: 0;
    margin-left: 1.25rem;
  }
}

<div
  aria-hidden={true}
  aria-labelledby="popover-title"
  className="c0"
  role="dialog"
>
  <button
    aria-label="Close"
    className="c1 k-Button c2 k-Button--micro k-Button--hydrogen k-Button--andromeda k-Button--fit-min-width k-Button--mobile-fit-none k-Button--fit-icon"
    onClick={[Function]}
    style={
      Object {
        "--Button-border-radius": 0,
      }
    }
    type="button"
  >
    <svg
      aria-hidden={true}
      fill="#fff"
      height="8"
      viewBox="0 0 8 8"
      width="8"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M.464 6.12L6.12.465 7.537 1.88 1.88 7.535z"
      />
      <path
        d="M1.88.464L7.535 6.12 6.12 7.537.465 1.88z"
      />
    </svg>
  </button>
  <div
    className="c3"
  >
    <p>
      illus
    </p>
  </div>
  <div>
    <div
      className="c4"
    >
      <h2
        className="c5 k-Title k-Title--senary k-Title--noMargin"
        id="popover-title"
        style={
          Object {
            "--Title-css-color": null,
          }
        }
      >
        This popover has a title
      </h2>
    </div>
    <div
      className="c6"
    >
      <p
        className="c7 k-Paragraph k-Paragraph--tertiary"
      >
        Maecenas sed diam eget risus varius blandit sit amet non magna. Donec id elit non mi porta gravida at eget metus. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. 
      </p>
    </div>
    <div
      className="c8 c9"
    >
      <button
        className="c1 k-Button k-Button--tiny k-Button--hydrogen k-Button--andromeda k-Button--fit-min-width k-Button--mobile-fit-none"
        onClick={[Function]}
        style={
          Object {
            "--Button-border-radius": 0,
          }
        }
        type="button"
      >
        J’ai compris
      </button>
      <button
        className="c1 k-Button k-Button--tiny k-Button--helium k-Button--andromeda k-Button--fit-min-width k-Button--mobile-fit-none"
        onClick={[Function]}
        style={
          Object {
            "--Button-border-radius": 0,
          }
        }
        type="button"
      >
        Mes préférences
      </button>
    </div>
  </div>
</div>
`;

exports[`<SimplePopover /> simple SimplePopover  matches with snapshot 1`] = `
.c3 {
  margin-bottom: 0.3125rem;
}

.c5 {
  margin-top: 0.3125rem;
  margin-bottom: 0.625rem;
}

.c4 {
  --Title-css-color: #222;
  font-family: Maax,Helvetica,Arial,sans-serif;
  -webkit-letter-spacing: .01rem;
  -moz-letter-spacing: .01rem;
  -ms-letter-spacing: .01rem;
  letter-spacing: .01rem;
  font-weight: 600;
  color: #222;
  color: var(--Title-css-color);
}

.c4.k-Title--noMargin {
  margin-top: 0;
  margin-bottom: 0;
}

.c4.k-Title--italic {
  font-style: italic;
}

.c4.k-Title--primary {
  font-size: 2.2806973457336426rem;
  line-height: 1.2;
}

.c4.k-Title--secondary {
  font-size: 2.0272865295410156rem;
  line-height: 1.2;
}

.c4.k-Title--tertiary {
  font-size: 1.802032470703125rem;
  line-height: 1.2;
}

.c4.k-Title--quaternary {
  font-size: 1.601806640625rem;
  line-height: 1.2;
}

.c4.k-Title--quinary {
  font-size: 1.265625rem;
  line-height: 1.2;
}

.c4.k-Title--senary {
  font-size: 1.125rem;
  line-height: 1.2;
}

.c4.k-Title--septenary {
  font-size: 1rem;
  line-height: 1.2;
}

.c6 {
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 400;
}

.c6.k-Paragraph--noMargin {
  margin-top: 0;
  margin-bottom: 0;
}

.c6.k-Paragraph--normalLineHeight {
  line-height: normal;
}

.c6.k-Paragraph--italic {
  font-style: italic;
}

.c6.k-Paragraph--primary {
  font-size: 1rem;
  line-height: 1.6;
}

.c6.k-Paragraph--secondary {
  font-size: 0.8888888888888888rem;
  line-height: 1.6;
}

.c6.k-Paragraph--tertiary {
  font-size: 0.7901234567901234rem;
  line-height: 1.6;
}

.c6.k-Paragraph--quaternary {
  font-size: 0.7901234567901234rem;
  line-height: 1.6;
}

.c1 {
  position: relative;
  box-sizing: border-box;
  min-height: var(--Button-dimension);
  padding: var(--Button-padding);
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.625rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.8888888888888888rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  cursor: pointer;
}

.c1:disabled {
  cursor: not-allowed;
}

.c1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:focus {
  outline: #bae8fd solid 0.125rem;
  outline-offset: 0.125rem;
}

.c1:focus:not(:focus-visible) {
  outline-color: transparent;
}

.c1:focus-visible {
  outline-color: #bae8fd;
}

.c1.k-Button--nano {
  --Button-dimension: 1.25rem;
  --Button-min-width: 6.25rem;
  --Button-padding: 0 0.375rem;
  font-size: 0.7901234567901234rem;
}

.c1.k-Button--micro {
  --Button-dimension: 1.875rem;
  --Button-min-width: 8.125rem;
  --Button-padding: 0.3125rem 0.625rem;
  font-size: 0.7901234567901234rem;
}

.c1.k-Button--tiny {
  --Button-dimension: 2.5rem;
  --Button-min-width: 10rem;
  --Button-padding: 0.4375rem 1.25rem;
}

.c1.k-Button--regular {
  --Button-dimension: 3.125rem;
  --Button-min-width: 12.5rem;
  --Button-padding: 0.625rem 1.875rem;
}

.c1.k-Button--big {
  --Button-dimension: 3.125rem;
}

.c1.k-Button--huge {
  --Button-dimension: 4.375rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c1.k-Button--giant {
  --Button-dimension: 4.375rem;
  --Button-padding: 0.625rem 0.625rem;
}

.c1.k-Button--fit-min-width:not(.k-Button--fit-icon):not(.k-Button--fit-fluid) {
  min-width: var(--Button-min-width);
}

.c1.k-Button--fit-icon {
  padding: 0;
  overflow: hidden;
  width: var(--Button-dimension);
  height: var(--Button-dimension);
}

.c1.k-Button--fit-fluid {
  width: 100%;
}

.c1.k-Button--hasBorderRadius {
  border-radius: var(--Button-border-radius);
}

.c1.k-Button--rounded {
  border-radius: 50%;
}

.c1.k-Button--orion {
  border-radius: 0.375rem;
}

.c1.k-Button--hydrogen {
  border: 0.125rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--hydrogen svg:not(.k-ColorSvg),
.c1.k-Button--hydrogen svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--hydrogen:hover,
.c1.k-Button--hydrogen:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c1.k-Button--hydrogen:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c1.k-Button--hydrogen:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--helium {
  border: 0.125rem solid #19b4fa;
  background-color: #19b4fa;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--helium svg:not(.k-ColorSvg),
.c1.k-Button--helium svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--helium:hover,
.c1.k-Button--helium:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c1.k-Button--helium:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c1.k-Button--helium:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--lithium {
  border: 0.125rem solid #bae8fd;
  background-color: #fff;
  color: #19b4fa;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--lithium svg:not(.k-ColorSvg),
.c1.k-Button--lithium svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--lithium:hover,
.c1.k-Button--lithium:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c1.k-Button--lithium:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c1.k-Button--lithium:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--beryllium {
  border: 0.125rem solid #222;
  background-color: #222;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--beryllium svg:not(.k-ColorSvg),
.c1.k-Button--beryllium svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--beryllium:hover,
.c1.k-Button--beryllium:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c1.k-Button--beryllium:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c1.k-Button--beryllium:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--carbon {
  border: 0.125rem solid #fff;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--carbon svg:not(.k-ColorSvg),
.c1.k-Button--carbon svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--carbon:hover,
.c1.k-Button--carbon:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c1.k-Button--carbon:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c1.k-Button--carbon:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--oxygen {
  border: 0.125rem dashed #bae8fd;
  background-color: #fff;
  color: #19b4fa;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--oxygen svg:not(.k-ColorSvg),
.c1.k-Button--oxygen svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--oxygen:hover,
.c1.k-Button--oxygen:focus {
  border-color: #05a8e6;
  background-color: #05a8e6;
  color: #fff;
}

.c1.k-Button--oxygen:active {
  border-color: #0496cc;
  background-color: #0496cc;
  color: #fff;
}

.c1.k-Button--oxygen:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--copper {
  border: 0.125rem solid #ffb2c7;
  background-color: #fff;
  color: #ff0046;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--copper svg:not(.k-ColorSvg),
.c1.k-Button--copper svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--copper:hover,
.c1.k-Button--copper:focus {
  border-color: currentColor;
  background-color: #fff;
  color: #ff0046;
}

.c1.k-Button--copper:active {
  border-color: currentColor;
  background-color: #fff;
  color: #ff0046;
}

.c1.k-Button--copper:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--boron {
  border: 0.125rem solid #636363;
  background-color: #222;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--boron svg:not(.k-ColorSvg),
.c1.k-Button--boron svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--boron:hover,
.c1.k-Button--boron:focus {
  border-color: currentColor;
  background-color: #2d2d2d;
  color: #fff;
}

.c1.k-Button--boron:active {
  border-color: currentColor;
  background-color: #2d2d2d;
  color: #b8b8b8;
}

.c1.k-Button--boron:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--neon {
  border: 0.125rem solid #ff7800;
  background-color: #ff7800;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--neon svg:not(.k-ColorSvg),
.c1.k-Button--neon svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--neon:hover,
.c1.k-Button--neon:focus {
  border-color: #f57905;
  background-color: #f57905;
  color: #fff;
}

.c1.k-Button--neon:active {
  border-color: #eb6e00;
  background-color: #eb6e00;
  color: #fff;
}

.c1.k-Button--neon:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--iron {
  border: 0.125rem solid #ff0046;
  background-color: #ff0046;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--iron svg:not(.k-ColorSvg),
.c1.k-Button--iron svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--iron:hover,
.c1.k-Button--iron:focus {
  border-color: #d8043e;
  background-color: #d8043e;
  color: #fff;
}

.c1.k-Button--iron:active {
  border-color: #a8002e;
  background-color: #a8002e;
  color: #fff;
}

.c1.k-Button--iron:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--social_facebook {
  border: 0.125rem solid #3b5998;
  background-color: #3b5998;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--social_facebook svg:not(.k-ColorSvg),
.c1.k-Button--social_facebook svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--social_facebook:hover,
.c1.k-Button--social_facebook:focus {
  border-color: #2c4a89;
  background-color: #2c4a89;
  color: #fff;
}

.c1.k-Button--social_facebook:active {
  border-color: #1d3b7a;
  background-color: #1d3b7a;
  color: #fff;
}

.c1.k-Button--social_facebook:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--social_twitter {
  border: 0.125rem solid #55acee;
  background-color: #55acee;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--social_twitter svg:not(.k-ColorSvg),
.c1.k-Button--social_twitter svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--social_twitter:hover,
.c1.k-Button--social_twitter:focus {
  border-color: #469ddf;
  background-color: #469ddf;
  color: #fff;
}

.c1.k-Button--social_twitter:active {
  border-color: #388ed0;
  background-color: #388ed0;
  color: #fff;
}

.c1.k-Button--social_twitter:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--social_linkedin {
  border: 0.125rem solid #00669e;
  background-color: #00669e;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--social_linkedin svg:not(.k-ColorSvg),
.c1.k-Button--social_linkedin svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--social_linkedin:hover,
.c1.k-Button--social_linkedin:focus {
  border-color: #00578f;
  background-color: #00578f;
  color: #fff;
}

.c1.k-Button--social_linkedin:active {
  border-color: #004880;
  background-color: #004880;
  color: #fff;
}

.c1.k-Button--social_linkedin:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--social_instagram {
  border: 0.125rem solid #3b5998;
  background-color: #3b5998;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  -webkit-transition: background 0.2s,color 0.2s;
  transition: background 0.2s,color 0.2s;
  border: 0 !important;
  background-repeat: no-repeat;
  background-image: radial-gradient( farthest-side at 32% 100%,#ffe17d 0%,#ffcd69 10%,#fa9137 28%,#eb4141 42%,transparent 82% ),linear-gradient(135deg,#234bd7 12%,#c33cbe 58%);
  background-size: 160% 100%;
  background-position: center;
}

.c1.k-Button--social_instagram svg:not(.k-ColorSvg),
.c1.k-Button--social_instagram svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--social_instagram:hover,
.c1.k-Button--social_instagram:focus {
  background-image: radial-gradient( farthest-side at 32% 100%,#f0d26e 0%,#f0be5a 10%,#eb8228 28%,#dc3232 42%,transparent 82% ),linear-gradient(135deg,#143cc8 12%,#b42daf 58%);
}

.c1.k-Button--social_instagram:active {
  background-image: radial-gradient( farthest-side at 32% 100%,#e1c35f 0%,#e1af4b 10%,#dc7319 28%,#cd2323 42%,transparent 82% ),linear-gradient(135deg,#052db9 12%,#a51ea0 58%);
}

.c1.k-Button--social_instagram:hover,
.c1.k-Button--social_instagram:focus {
  border-color: #2c4a89;
  background-color: #2c4a89;
  color: #fff;
}

.c1.k-Button--social_instagram:active {
  border-color: #1d3b7a;
  background-color: #1d3b7a;
  color: #fff;
}

.c1.k-Button--social_instagram:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--social_youtube {
  border: 0.125rem solid #ff0000;
  background-color: #ff0000;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--social_youtube svg:not(.k-ColorSvg),
.c1.k-Button--social_youtube svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--social_youtube:hover,
.c1.k-Button--social_youtube:focus {
  border-color: #f00000;
  background-color: #f00000;
  color: #fff;
}

.c1.k-Button--social_youtube:active {
  border-color: #e10000;
  background-color: #e10000;
  color: #fff;
}

.c1.k-Button--social_youtube:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c1.k-Button--social_pinterest {
  border: 0.125rem solid #bd081c;
  background-color: #bd081c;
  color: #fff;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c1.k-Button--social_pinterest svg:not(.k-ColorSvg),
.c1.k-Button--social_pinterest svg:not(.k-ColorSvg) path {
  fill: currentColor;
  -webkit-transition: fill 0.2s;
  transition: fill 0.2s;
}

.c1.k-Button--social_pinterest:hover,
.c1.k-Button--social_pinterest:focus {
  border-color: #ae000d;
  background-color: #ae000d;
  color: #fff;
}

.c1.k-Button--social_pinterest:active {
  border-color: #9f0000;
  background-color: #9f0000;
  color: #fff;
}

.c1.k-Button--social_pinterest:disabled {
  border-color: #d8d8d8;
  background-color: #d8d8d8;
  color: #fff;
}

.c0 {
  padding: 2.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  border: solid #eee 0.125rem;
  box-sizing: border-box;
  max-width: 34.6875rem;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  margin-bottom: 1.25rem;
  background-color: #fff;
  opacity: 1;
  visibility: visible;
  -webkit-transition: opacity 0.3s ease,visibility 0s ease;
  transition: opacity 0.3s ease,visibility 0s ease;
  -webkit-transition-delay: 0s,0s;
  transition-delay: 0s,0s;
}

.c0[aria-hidden='true'] {
  opacity: 0;
  visibility: hidden;
  -webkit-transition-delay: 0s,0.3s;
  transition-delay: 0s,0.3s;
}

.c2 {
  position: absolute;
  top: -0.125rem;
  right: -0.125rem;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

@media (min-width:40rem) {
  .c4.k-Title--primary {
    font-size: 2.8865075781941414rem;
  }
}

@media (min-width:67.5rem) {
  .c4.k-Title--primary {
    font-size: 4.109890672858455rem;
  }
}

@media (min-width:40rem) {
  .c4.k-Title--secondary {
    font-size: 2.2806973457336426rem;
  }
}

@media (min-width:67.5rem) {
  .c4.k-Title--secondary {
    font-size: 2.8865075781941414rem;
  }
}

@media (min-width:40rem) {
  .c4.k-Title--tertiary {
    font-size: 2.0272865295410156rem;
  }
}

@media (min-width:67.5rem) {
  .c4.k-Title--tertiary {
    font-size: 2.2806973457336426rem;
  }
}

@media (min-width:40rem) {
  .c4.k-Title--quaternary {
    font-size: 1.802032470703125rem;
  }
}

@media (min-width:67.5rem) {
  .c4.k-Title--quaternary {
    font-size: 2.0272865295410156rem;
  }
}

@media (min-width:40rem) {
  .c4.k-Title--quinary {
    font-size: 1.601806640625rem;
  }
}

@media (min-width:67.5rem) {
  .c4.k-Title--quinary {
    font-size: 1.802032470703125rem;
  }
}

@media (min-width:40rem) {
  .c4.k-Title--senary {
    font-size: 1.265625rem;
  }
}

@media (min-width:67.5rem) {
  .c4.k-Title--senary {
    font-size: 1.601806640625rem;
  }
}

@media (min-width:40rem) {
  .c4.k-Title--septenary {
    font-size: 1.125rem;
  }
}

@media (min-width:67.5rem) {
  .c4.k-Title--septenary {
    font-size: 1.265625rem;
  }
}

@media (min-width:40rem) {
  .c6.k-Paragraph--primary {
    font-size: 1.125rem;
  }
}

@media (min-width:67.5rem) {
  .c6.k-Paragraph--primary {
    font-size: 1.265625rem;
  }
}

@media (min-width:40rem) {
  .c6.k-Paragraph--secondary {
    font-size: 1rem;
  }
}

@media (min-width:67.5rem) {
  .c6.k-Paragraph--secondary {
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c6.k-Paragraph--tertiary {
    font-size: 0.8888888888888888rem;
  }
}

@media (min-width:67.5rem) {
  .c6.k-Paragraph--tertiary {
    font-size: 0.8888888888888888rem;
  }
}

@media (min-width:40rem) {
  .c6.k-Paragraph--quaternary {
    font-size: 0.7901234567901234rem;
  }
}

@media (min-width:67.5rem) {
  .c6.k-Paragraph--quaternary {
    font-size: 0.7901234567901234rem;
  }
}

@media (min-width:40rem) {
  .c1.k-Button--big {
    --Button-min-width: 13.75rem;
    --Button-dimension: 4.375rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c1.k-Button--huge {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5rem;
    --Button-padding: 0.625rem 2.5rem;
    font-size: 1rem;
  }
}

@media (min-width:40rem) {
  .c1.k-Button--giant {
    --Button-min-width: 13.75rem;
    --Button-dimension: 5.625rem;
    font-size: 1rem;
    --Button-padding: 0.625rem 2.5rem;
  }
}

@media (max-width:39.9375rem) {
  .c1[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none) {
    min-width: initial !important;
    padding: var(--Button-padding);
    width: initial;
    height: initial;
    width: initial;
  }

  .c1[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-min-width {
    min-width: var(--Button-min-width) !important;
  }

  .c1[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-icon {
    padding: 0;
    overflow: hidden;
    width: var(--Button-dimension);
    height: var(--Button-dimension);
  }

  .c1[class*='k-Button--mobile-fit']:not(.k-Button--mobile-fit-none).k-Button--mobile-fit-fluid {
    width: 100%;
  }
}

@media (min-width:40rem) {
  .c1.k-Button--orion {
    border-radius: 0.5rem;
  }
}

@media (min-width:40rem) {
  .c0 {
    padding: 3.125rem 2.5rem;
  }
}

<div
  aria-hidden={true}
  aria-labelledby="popover-title"
  className="c0"
  role="dialog"
>
  <button
    aria-label="Close"
    className="c1 k-Button c2 k-Button--micro k-Button--hydrogen k-Button--andromeda k-Button--fit-min-width k-Button--mobile-fit-none k-Button--fit-icon"
    onClick={[Function]}
    style={
      Object {
        "--Button-border-radius": 0,
      }
    }
    type="button"
  >
    <svg
      aria-hidden={true}
      fill="#fff"
      height="8"
      viewBox="0 0 8 8"
      width="8"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M.464 6.12L6.12.465 7.537 1.88 1.88 7.535z"
      />
      <path
        d="M1.88.464L7.535 6.12 6.12 7.537.465 1.88z"
      />
    </svg>
  </button>
  <div>
    <div
      className="c3"
    >
      <h2
        className="c4 k-Title k-Title--senary k-Title--noMargin"
        id="popover-title"
        style={
          Object {
            "--Title-css-color": null,
          }
        }
      >
        
      </h2>
    </div>
    <div
      className="c5"
    >
      <p
        className="c6 k-Paragraph k-Paragraph--tertiary"
      >
        
      </p>
    </div>
  </div>
</div>
`;
